fix(css): disable text wrapping on buttons

--- a/src/assets/styles/uno.css
+++ b/src/assets/styles/uno.css
@@ -1,6 +1,6 @@
 html {
   /* Workaround for: https://github.com/unocss/unocss/issues/924 */
-  --at-apply: font-sans;
+  @apply font-sans;
 }
 
 /* @layer utilities { */
@@ -22,38 +22,34 @@ html {
 /* } */
 
 /* @layer components { */
+
 .btn {
-  --at-apply: inline-flex items-center justify-center rounded-full border-gray-400 border bg-transparent font-medium
-    text-center text-base text-page leading-snug transition py-3.5 px-6 md: px-8 ease-in duration-200 focus:
-    ring-blue-500 focus: ring-offset-blue-200 focus: ring-2 focus: ring-offset-2 hover: bg-gray-100 hover:
-    border-gray-600 dark: text-slate-300 dark: border-slate-500 dark: hover: bg-slate-800 dark: hover: border-slate-800
-    cursor-pointer;
+  @apply text-truncate flex-nowrap inline-flex items-center justify-center rounded-full border-gray-400 border bg-transparent font-medium text-center text-base text-page leading-snug transition py-3.5 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-100 hover:border-gray-600 dark:text-slate-300 dark:border-slate-500 dark:hover:bg-slate-800 dark:hover:border-slate-800 cursor-pointer;
 }
 .btn-primary {
-  --at-apply: btn font-semibold bg-primary text-white border-primary hover: bg-secondary hover: border-secondary hover:
-    text-white dark: text-white dark: bg-primary dark: border-primary dark: hover: border-secondary dark: hover:
-    bg-secondary;
+  @apply btn bg-primary border-primary hover:bg-secondary hover:border-secondary dark:bg-primary dark:border-primary dark:hover:border-secondary dark:hover:bg-secondary font-semibold text-white hover:text-white dark:text-white;
 }
 .btn-secondary {
-  --at-apply: btn;
+  @apply btn bg-transparent text-muted;
 }
 .btn-tertiary {
-  --at-apply: btn border-none shadow-none text-muted hover: text-gray-900 dark: text-gray-400 dark: hover: text-white;
+  @apply btn text-muted border-none shadow-none hover:text-gray-900 dark:text-gray-400 dark:hover:text-white;
 }
+
 /* } */
 
 #header.scroll > div:first-child {
-  --at-apply: bg-page md: bg-white/90 md: backdrop-blur-md;
+  @apply bg-page md:bg-white/90 md:backdrop-blur-md;
   box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
 }
 .dark #header.scroll > div:first-child,
 #header.scroll.dark > div:first-child {
-  --at-apply: bg-page md: bg-[#030621e6] border-b border-gray-500/20;
+  @apply bg-page border-b border-gray-500/20 md:bg-[#030621e6];
   box-shadow: none;
 }
 
 /* #header.scroll > div:last-child { */
-/*   --at-apply: py-3; */
+/*   @apply py-3; */
 /* } */
 
 #header.expanded nav {
@@ -78,14 +74,14 @@ html {
 }
 
 [data-aw-toggle-menu] path {
-  --at-apply: transition;
+  @apply transition;
 }
 [data-aw-toggle-menu].expanded g > path:first-child {
-  --at-apply: -rotate-45 translate-y-[15px] translate-x-[-3px];
+  @apply -rotate-45 translate-y-[15px] translate-x-[-3px];
 }
 
 [data-aw-toggle-menu].expanded g > path:last-child {
-  --at-apply: rotate-45 translate-y-[-8px] translate-x-[14px];
+  @apply rotate-45 translate-y-[-8px] translate-x-[14px];
 }
 
 /* To deprecated */
